<resources>
    <string name="app_name">Notes</string>
    <string name="hint_btn">btn</string>
    <string name="btn_search">btn_search</string>
    <string name="btn_press">btn_press</string>
    <string name="btn_save">btn_save</string>
    <string name="btn_delete">btn_delete</string>
    <string name="hint_title">Title</string>
    <string name="hint_desc">Description</string>
    <string name="hint_date">Date and Time</string>
    <string name="hint_search">Enter a note…</string>
    <string name="edit_note">Edit</string>

    <!--  Colors CardView (contentDescription) -->
    <string name="azure">Azure</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="pea">Pea</string>
    <string name="teal">Teal</string>
    <string name="popup_remove">Remove</string>
</resources>