<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    tools:context=".NoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_press"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_save_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="s" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_press"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete_note"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_press"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_note"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/hint_desc"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textAlignment="viewStart"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title"
        tools:ignore="RtlSymmetry" />

    <androidx.cardview.widget.CardView
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="#C5C5C5"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/pea"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/pea"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gray"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pea" />

            <ImageButton
                android:id="@+id/gray"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/azure"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gray" />

            <ImageButton
                android:id="@+id/azure"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/azure"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/teal"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/azure" />

            <ImageButton
                android:id="@+id/teal"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/teal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/green"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/teal" />

            <ImageButton
                android:id="@+id/green"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orange"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/green" />

            <ImageButton
                android:id="@+id/orange"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/orange" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>